# evolvepy

./: .gitignore  Exemplo - 3 CNF SAT.ipynb  LICENSE  README.md  setup.cfg
benchmark/: analisys.ipynb  analisys_evaluator_paralelism.py  analisys_generator_paralelism.py  evaluator_paralelism.bat  evaluator_paralelism.py  generator_paralelism.bat  generator_paralelism.py  global_qualitative.py  utils.py
devel/: Reinforcement Learning.ipynb  args.ipynb  distributed.py  jit_opt.py  keras_process.py  keras_tests.ipynb  numba_tests.ipynb  nvtx.md  nvtx_global.py  nvtx_process.py  nvtx_test.py  rl_utils.py  selection.ipynb  test.py  test_copy.ipynb  test_evolve.py
docs/: Changelog.md  Examples.md  README.md  conf.py  evolvepy.callbacks.rst  evolvepy.evaluator.rst  evolvepy.generator.arrangement.rst  evolvepy.generator.rst  evolvepy.generator.selection.rst  evolvepy.integrations.nvtx.rst  evolvepy.integrations.ray.rst  evolvepy.integrations.rst  evolvepy.integrations.tf_keras.rst  evolvepy.integrations.unity_gym.rst  evolvepy.integrations.wandb.rst  evolvepy.rst  examples_link.rst  index.html  index.rst  markdown_parser.py  modules.rst  readme_parser.py
examples/: 1 - Simple EA.ipynb  2 - Elitism.ipynb  3 - Dynamic Mutation.ipynb  3-CNF-SAT.ipynb  3DBall_EvolvePy.onnx  4 - Logger.ipynb  5 - Incremental Evolution.ipynb  5 - Ramdom Predation.ipynb  7 - TF-Keras Integration.ipynb  Car PID Control.ipynb  Distributed Reinforcement Learning.ipynb  Dynamic Mutation.ipynb  Elitism.ipynb  Examples.md  Exemple - 3 CNF SAT.ipynb  Exemplo - 3 CNF SAT.ipynb  Incremental Evolution.ipynb  (+16 more)
(+221 files in other folders)
