[metadata]
name = evolvepy
version = 0.0.0
author = 
author_email = 
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EltonCN/evolvepy
project_urls =
    Bug Tracker = https://github.com/EltonCN/evolvepy/issues
    Documentation = 
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

license_files = 
license = 
[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    numba

[options.extras_require]
iaExamples = tensorflow

[options.packages.find]
where = src